[gd_scene load_steps=16 format=2]

[ext_resource path="res://Juego/Estaciones/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Estaciones/Base_Enemiga/Parte3.png" type="Texture" id=2]
[ext_resource path="res://Juego/Estaciones/Base_Enemiga/Parte2.png" type="Texture" id=3]
[ext_resource path="res://Juego/Estaciones/Base_Enemiga/Parte4.png" type="Texture" id=4]
[ext_resource path="res://Juego/Estaciones/Base_Enemiga/Parte1.png" type="Texture" id=5]
[ext_resource path="res://Juego/Estaciones/Base_Enemiga/BaseEnemiga.gd" type="Script" id=6]
[ext_resource path="res://Juego/Estaciones/Base_Enemiga/Impacto.ogg" type="AudioStream" id=7]
[ext_resource path="res://Juego/Estaciones/Base_Enemiga/AreaColision.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=4]
radius = 72.5139
height = 408.209

[sub_resource type="CapsuleShape2D" id=5]
radius = 34.9075
height = 4.77191

[sub_resource type="CapsuleShape2D" id=6]
radius = 24.9319
height = 79.3481

[sub_resource type="Animation" id=1]
resource_name = "default"

[sub_resource type="Animation" id=7]
resource_name = "rotar_pendulo"
length = 5.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 90.0, -90.0, 90.0, -90.0, 90.0, -90.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotar_sentido_antihorario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZonaRecarga:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotar_sentido_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZonaRecarga:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="BaseEnemiga" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprites" type="Node2D" parent="."]
rotation = 1.5708

[node name="AreaColision" type="Area2D" parent="Sprites"]
rotation = 1.74846e-07
collision_layer = 32
collision_mask = 27
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprites/AreaColision"]
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sprites/AreaColision"]
position = Vector2( -104.652, -76.3676 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Sprites/AreaColision"]
position = Vector2( 134.35, -79.196 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Sprites"]
position = Vector2( 148.37, -78.9525 )
rotation = 3.14159
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 0, 37.4577 )
scale = Vector2( 1, 1.18729 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( 4, -251 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 4, -214 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]
visible = false

[node name="SpriteZonaRecarga" parent="AreaAtraccion" index="1"]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )
anims/rotar_pendulo = SubResource( 7 )
anims/rotar_sentido_antihorario = SubResource( 2 )
anims/rotar_sentido_horario = SubResource( 3 )

[node name="Impacto_SFX" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 7 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[connection signal="body_entered" from="Sprites/AreaColision" to="." method="_on_AreaColision_body_entered"]

[editable path="AreaAtraccion"]
